fix: prevent layout shift by defining fixed width for game-container children

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -62,6 +62,7 @@
 
       .game-actions,
       .game-info {
+        width: 50%;
         padding: 1.6rem;
       }
 
@@ -134,6 +135,12 @@
       .game-container {
         flex-direction: column;
         padding-top: 12rem;
+
+        .game-actions,
+        .game-info {
+          width: 100%;
+          margin: auto;
+        }
 
         .game-info {
           &__message {
